Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76806

[OpenVG] QQuickWindow::sceneGraphInitialized and sceneGraphInvalidated won't be emitted

XMLWordPrintable

    • Linux/Wayland
    • 8e49f5060632451f6b2c4cb3597aed7308490f39 (qt/qtdeclarative/5.13)

      QQuickWindow::sceneGraphInitialized and QQuickWindow::sceneGraphInvalidated signals won't be emitted when set QT_QUICK_BACKEND=openvg.

       

      However, if add emits in qtdeclarative/src/plugins/scenegraph/openvg/qsgopenvgcontext.cpp as followings, it works. Is this bug or there is other reason? (QSGD3D12RenderContext::initialize() and QSGD3D12RenderContext::invalidate() emit both signals)

       

      diff --git a/src/plugins/scenegraph/openvg/qsgopenvgcontext.cpp b/src/plugins/scenegraph/openvg/qsgopenvgcontext.cpp
      index 76ebb7c4e..e4acda1ff 100644
      --- a/src/plugins/scenegraph/openvg/qsgopenvgcontext.cpp
      +++ b/src/plugins/scenegraph/openvg/qsgopenvgcontext.cpp
      @@ -72,6 +72,7 @@ void QSGOpenVGRenderContext::initialize(void *context)
       {
           m_vgContext = static_cast<QOpenVGContext*>(context);
           QSGRenderContext::initialize(context);
      +    emit initialized();
       }
       
       void QSGOpenVGRenderContext::invalidate()
      @@ -80,6 +81,7 @@ void QSGOpenVGRenderContext::invalidate()
           delete m_glyphCacheManager;
           m_glyphCacheManager = nullptr;
           QSGRenderContext::invalidate();
      +    emit invalidated();
       }
       
       void QSGOpenVGRenderContext::renderNextFrame(QSGRenderer *renderer, uint fboId)
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            akizawa Akihito Izawa
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes