OpenVG: Fix emitting of sceneGraphInitialized and -Invalidated

These QQuickWindow signals were not emitted when using the OpenVG
backed. The reason was that the OpenVG scenegraph context, unlike
other backend contexts, did not signal when it was initialized and
invalidated.

Fixes: QTBUG-76806
Change-Id: I2299b253464b71d4ca9c54c85359c6bcb0718d43
Reviewed-by: Andy Nichols <andy.nichols@qt.io>